fix: port 53 should be opened for egress access for making dns queries

--- a/ingress-egress/deny-all.yaml
+++ b/ingress-egress/deny-all.yaml
@@ -5,6 +5,13 @@ metadata:
   namespace: default
 spec:
   podSelector: {}
+  egress:
+  - to:
+    ports:
+    - protocol: TCP
+      port: 53
+    - protocol: UDP
+      port: 53
   policyTypes:
   - Ingress
   - Egress
