--- a/ns-isolation/dev/deny-all-dev.yaml
+++ b/ns-isolation/dev/deny-all-dev.yaml
@@ -2,9 +2,16 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: default-deny-all
-  namespace: prod
+  namespace: dev
 spec:
   podSelector: {}
+  egress:
+  - to:
+    ports:
+    - protocol: TCP
+      port: 53
+    - protocol: UDP
+      port: 53
   policyTypes:
   - Ingress
   - Egress
