--- a/ns-isolation/prod/api-np.yaml
+++ b/ns-isolation/prod/api-np.yaml
@@ -1,17 +1,17 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: nginx-egress
+  name: api-ingress
   namespace: prod
 spec:
   podSelector:
     matchLabels:
-      app: nginx
-  egress:
-  - to:
+      app: api
+  ingress:
+  - from:
     - podSelector:
         matchLabels:
-          app: "api"
+          app: "nginx"
       namespaceSelector:
         matchLabels:
-          env: prod
+          env: dev
