refactor: on ingress-egress

--- a/ns-isolation/dev/nginx-np.yaml
+++ b/ns-isolation/dev/nginx-np.yaml
@@ -11,7 +11,7 @@ spec:
   - to:
     - podSelector:
         matchLabels:
-          app: "api"
+          app: api
       namespaceSelector:
         matchLabels:
           env: prod
