--- a/ns-isolation/prod/api-np.yaml
+++ b/ns-isolation/prod/api-np.yaml
@@ -11,7 +11,7 @@ spec:
   - from:
     - podSelector:
         matchLabels:
-          app: "nginx"
+          app: nginx
       namespaceSelector:
         matchLabels:
           env: dev
